fix align items

--- a/source/styling/notes.css
+++ b/source/styling/notes.css
@@ -22,7 +22,6 @@ header {
     width: 90%;
     display: flex;
     flex-direction: column;
-    align-items: left;
 }
 
 #subheader {
